# gmail-mcp

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
mcp_gmail_server/: __init__.py  gmail_auth.py  gmail_client.py  main.py  models.py  utils.py
tests/: test_gmail_auth.py  test_gmail_client.py  test_main.py  test_models.py  test_utils.py
